--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@keyframes ellipsis {
+    0% {
+        content: "";
+    }
+
+    25% {
+        content: ".";
+    }
+
+    50% {
+        content: "..";
+    }
+
+    75% {
+        content: "...";
+    }
+
+    100% {
+        content: "";
+    }
+}
+
+.ellipsis:after {
+    content: "";
+    display: inline-block;
+    animation: ellipsis 3s steps(4, end) infinite;
+}
